# HMT_Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  dtwM.txt  example.txt  frechet.txt  imgui.ini  my.res  output.txt  test  thread_test.cpp
benchmark-main/test/: register_benchmark_test.cc
bvh_parser/: bvhparser.py  walk1.bvh  walk1.csv
imgui/: example_implot.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  implot.cpp  implot_demo.cpp  implot_items.cpp
include/: application.h  cylinder.h  defines.h  display_helper.h  distance_measures.h  dtw.h  edit_distance.h  example_layer.h  imgui_layer.h  input_parser.h  layers.h  line.h  motion_data.h  shader.h  sphere.h  tests.h  trajectories.h  trajectory_analysis.h  ui_context.h  util.h  window_helper.h
include/imgui/: imgui.h  imgui_internal.h  imgui_neo_sequencer.cpp  imgui_neo_sequencer.h  spinner.h
lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
lib/cmake/glfw3/: glfw3Targets.cmake
lib/pkgconfig/: glfw3.pc
misc/cpp/: imgui_stdlib.cpp
resources/: MR_TST_1_annotated_Tai_Chi_Push_000_annotated.txt  mr_31_annotated_Tai_Chi_Push_003_annotated.txt  squats_subject_info.csv  taichi_subject_info.csv
resources/motion_data/squats/: expertise_01_single100_2_splitted_1.txt  expertise_01_single100_2_splitted_5.txt  expertise_02_single100_splitted_1.txt  expertise_02_single100_splitted_7.txt  expertise_03_single100_splitted_1.txt  expertise_03_single100_splitted_8.txt  expertise_04_single100_splitted_1.txt  expertise_04_single100_splitted_10.txt  expertise_05_single100_splitted_1.txt  expertise_05_single100_splitted_8.txt  expertise_06_single100_splitted_1.txt  expertise_06_single100_splitted_2.txt  expertise_07_single100_splitted_1.txt  expertise_07_single100_splitted_6.txt  expertise_08_single100_splitted_1.txt  expertise_08_single100_splitted_5.txt  fb_01_pre_splitted_1.txt  fb_01_pre_splitted_2.txt  fb_02_pre_splitted_1.txt  fb_02_pre_splitted_2.txt  fb_03_pre_splitted_1.txt  fb_03_pre_splitted_6.txt  fb_04_pre_splitted_1.txt  fb_04_pre_splitted_6.txt  fb_05_pre_splitted_1.txt  fb_05_pre_splitted_9.txt  fb_06_pre_splitted_1.txt  fb_06_pre_splitted_9.txt  fb_07_pre_splitted_1.txt  fb_07_pre_splitted_4.txt  fb_08_pre_splitted_1.txt  fb_08_pre_splitted_3.txt  fb_09_pre_splitted_1.txt  fb_09_pre_splitted_9.txt  fb_10_pre_splitted_6.txt  fb_11_pre_splitted_1.txt  fb_11_pre_splitted_3.txt  fb_12_pre_splitted_0.txt  fb_12_pre_splitted_1.txt  fb_13_pre_splitted_1.txt  (+56 more)
resources/motion_data/taichi/: MR_TST_1_annotated_Tai_Chi_Push_001_annotated.txt  MR_TST_1_annotated_Tai_Chi_Push_002_annotated.txt  MR_TST_1_annotated_Tai_Chi_Push_003_annotated.txt  MR_TST_1_annotated_Tai_Chi_Push_004_annotated.txt  TaiChi_Stoss_01_annotated_Tai_Chi_Push_001_annotated.txt  mr_01_annotated_Tai_Chi_Push_000_annotated.txt  mr_01_annotated_Tai_Chi_Push_001_annotated.txt  mr_01_annotated_Tai_Chi_Push_002_annotated.txt  mr_01_annotated_Tai_Chi_Push_003_annotated.txt  mr_01_annotated_Tai_Chi_Push_004_annotated.txt  (+103 more)
resources/test/: expertise_01_single100_2_splitted_1.txt  fb_41_pre_splitted_1.txt
src/: Makefile  cylinder.cpp  dtw.cpp  edit_distance.cpp  imgui_impl_opengl3.cpp  imgui_main.cpp  input_parser.cpp  main.cpp  shader.cpp  sphere.cpp  trajectory_analysis.cpp
src/algorithms/: algo_settings.h  distance_measures.h  dtw.cpp  dtw.h  edit_distance.cpp  edit_distance.h  error_distances.h  frechet.cpp  frechet.h  lcss.cpp  lcss.h  trajectory_analysis.cpp  trajectory_analysis.h
src/app/: Engine.h  application.cpp  application.h  display_helper.h  engine.cpp  main.cpp  motion_file_processor.cpp  motion_file_processor.h  renderer.cpp  renderer.h  singleContext.h  trajectory_analysis_manager.cpp  trajectory_analysis_manager.h  ui_context.h
src/benchmarks/: Makefile  mybenchmark.cpp  mybenchmark.h  results.txt
src/data/: algo_settings.h  data.h  distance_functions.h  motion_data.h
src/imgui/: example_layer.h  image_loader.cpp  image_loader.h  imgui_layer.cpp  imgui_layer.h  imgui_layers.cpp  imgui_layers.h  layer.cpp  layer.h  layer_data.h  layers.h  result_layer.cpp  result_layer.h
src/misc/: defines.h  enums.cpp  enums.h  util.h
src/opengl/: shader.cpp  sphere.cpp  sphere.h
src/parsing/: input_parser.cpp  input_parser.h  motion_data.h  trajectories.h
src/shader/: floorFragmentShader.glsl  floorVertexShader.glsl  fragment_shader.glsl  textured_fragment_shader.glsl  textured_vertex_shader.glsl  vertex_shader.glsl
src/tests/: tests.h
(+24 files in other folders)
